Introduced Data manager for data sending between windows
Also, some refactoring has been done and the game window now can
accept different levels.